<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Contraction Timer</string>
    <string name="list_header_duration">Duration</string>
    <string name="list_header_frequency">Frequency</string>
    <string name="contraction_average">Average</string>
    <string name="menu_start_contraction">Start Contraction</string>
    <string name="menu_stop_contraction">Stop Contraction</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_stop">Stop</string>
    <string name="empty_state">Tap to start a contraction</string>
    <string name="timing">Timing</string>
    <string name="default_time">00:00:00PM</string>
    <string name="default__elapsed_time">00:00</string>
</resources>
